# HeavySim

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  generate.cc  main.cc  pythia_event_utils.cpp  pythia_event_utils.h  pythia_particle_utils.cpp  pythia_particle_utils.h
HeavySim/: CMakeLists.txt  analyse.cpp
HeavySim/analysis/: funcional_filter.cc
HeavySim/container/: CMakeLists.txt  reduced_particle.h
HeavySim/tree_analysis/: reader.h
analysis/: CMakeLists.txt  analysis_linkdef.h  filter.cc  filter.h  funcional_filter.h  reduced_event.cc  reduced_event.h  reduced_particle.cc  reduced_particle.h
cmake/: FindPythia8.cmake
container/: container_linkdef.h  reduced_event.h
tree_analysis/: CMakeLists.txt  task.h
